prevent false taps when popup is visible

--- a/3D-Guided Service Instructions/3D-Guided Service Instructions 200/3D-Guided Service Instructions 201/src/shared/styles/app.scss
+++ b/3D-Guided Service Instructions/3D-Guided Service Instructions 200/3D-Guided Service Instructions 201/src/shared/styles/app.scss
@@ -35,3 +35,7 @@ div.backdrop.visible.active {
 div.popover-backdrop.active {
   background-color:rgba(0,0,0,0) !important;
 }*/
+
+.popup-container.popup-hidden, .popup-container.active {
+  pointer-events: visible;
+}
