--- a/3D-Guided Service Instructions/3D-Guided Service Instructions 300/3D-Guided Service Instructions 302/src/shared/styles/app.scss
+++ b/3D-Guided Service Instructions/3D-Guided Service Instructions 300/3D-Guided Service Instructions 302/src/shared/styles/app.scss
@@ -71,3 +71,6 @@
   background: #c8c9c7;
   color: #236192;
 }
+.popup-container.popup-hidden, .popup-container.active {
+  pointer-events: visible;
+}
